<resources>
    <string name="app_name">PlayShare</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="name_input_hint">Name</string>
    <string name="height_input_hint">Height</string>
    <string name="age_input_hint">Age</string>
    <string name="sport_input_hint">Sport</string>
    <string name="game_type_input_hint">Game Type</string>
    <string name="players_level_input_hint">Players Level</string>
    <string name="preferred_game_input_hint">Preferred Game</string>
    <string name="save">Save</string>

    <string name="edit_profile">Edit profile</string>
    <string name="content_description_edit_profile">edit profile</string>
    <string name="more">more</string>
    <string name="content_description_more">more</string>

    <string name="itamar_string"> Itamar Brina 208560920</string>
    <string name="itay_string"> Itay Asraf 205439771</string>
    <string name="iyar_string"> Iyar Levy 318163649</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading…</string>
    <string name="app_logo">App Logo</string>
    <string name="logout">Logout</string>
    <string name="show_stats">Show stats</string>

    <string name="failed_fetch_data">Failed to fetch data</string>
    <string name="failed_load_image">Failed to load image</string>

    <string name="permission_denied">Permission denied</string>
    <string name="permission_denied_location_message">You need to grant location permission to use Map feature</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="map_preview">Map Preview</string>
</resources>